# file_server

./: .gitignore  Cargo.toml  LICENSE  README.md  configuration.md  file-server.json.example  file_server.example.json  file_server.json
.github/workflows/: build.yml
config/: Cargo.toml
config/src/: content_encoding.rs  lib.rs
demo/: 403.html  404.html  404.html.zst  500.html  file-server.json  file-server.podman-compose.yml  file-server.podmanfile  index.html  index.html.zst
file_server/: Cargo.toml
file_server/src/: config.rs  main.rs  service.rs
response/: Cargo.toml
response/src/: get_response.rs  head_response.rs  lib.rs  range_response.rs  response_paths.rs  responses.rs
responses/: Cargo.toml
responses/src/: available_encodings.rs  content_type.rs  get_range_response.rs  get_response.rs  head_response.rs  last_resort_response.rs  lib.rs  range_response.rs  request_details.rs  response_paths.rs  responses.rs  service.rs  service_requirements.rs  type_flyweight.rs
rust/container/: fileserver.json.example  podman-compose.yml.template  podmanfile.template
rust/demo/: 400.html
rust/v0.1/: Cargo.toml  file-server.json
rust/v0.1/src/: config.rs  main.rs  send_file.rs  serve_file.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  service.rs
src/: config.rs  content_and_encoding.rs  content_and_encoding_type.rs  encodings.rs  get_range_response.rs  get_response.rs  head_response.rs  main.rs  response_paths.rs  responses.rs  service.rs  type_flyweight.rs
v0.1/: build_container_files.sh  file-server.json.example  file_server.example.json  install.sh
v0.1/app/: Cargo.toml
v0.1/config/: Cargo.toml
v0.1/config/src/: lib.rs
v0.1/container/: Cargo.toml  file-server.podmanfile  podman-compose.yml.template  podmanfile.template  todo.txt
v0.1/container/src/: container.rs  main.rs
v0.1/file-server/: Cargo.toml
v0.1/file-server/src/: config.rs  main.rs  serve_file.rs
v0.1/file_server/: Cargo.toml
v0.1/file_server/src/: config.rs  main.rs  responses.rs  serve_file.rs
v0.1/resources/: file-server.podmanfile  file_server.json.example  file_server.podmanfile  podman-compose.yml.template  podmanfile.template
v0.1/templates/: file_server.json.example  podman-compose.yml.template  podmanfile.template
