[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
hyper = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }

config = { path = "../config" }
