[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true}
futures-util = { workspace = true}
http-body-util = { workspace = true}
hyper-util = { workspace = true}
hyper = { workspace = true}
response = { path = "../response" }
serde_json = { workspace = true}
serde = { workspace = true}
tokio-util = { workspace = true}
tokio = { workspace = true}
