[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"

futures-util = { version = "0.3", default-features = false }

config = { path = "../config" }
